fix(core): reorder values[] when parent variables are reordered in CPT (#562)
  SetPotentialVariablesEdit.doEdit() was calling setVariables() directly,
  which replaced the variable list without touching values[] or the
  offsets[] array. Because table indexing in AbstractIndexedPotential is
  computed once from the variable order, every probability lookup returned
  the wrong value after a reorder — a silent data corruption.

  Replace the setVariables() call with potential.reorder(newVariables),
  which returns a properly reordered copy with consistent variables[],
  dimensions[], offsets[], and values[]. Node.setPotential() then swaps
  the corrupted instance for the correct one.

  undo() now restores the original potential object (not just the variable
  list), making undo/redo symmetric.

  For potential types whose reorder() still returns null (unimplemented
  stubs), the edit falls back to the old setVariables() path so those
  types do not crash — values remain in the wrong order, but that is a
  pre-existing limitation of those stubs, not a regression.

  Adds SetPotentialVariablesEditTest (6 tests) covering the reorder,
  undo, and undo-restores-original-values paths.

  Part of issue #449.